--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
   "dependencies": {
     "airtable": "^0.11.2",
     "dotenv": "^16.0.0",
-    "next": "12.0.10",
+    "next": "^12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.2",
-    "eslint": "8.9.0",
+    "eslint": "^8.10.0",
     "eslint-config-next": "12.0.10",
     "postcss": "^8.4.7",
     "tailwindcss": "^3.0.23"
